plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.12'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'org.prgrms.kdt'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    //assertj 의존성 추가
    testImplementation 'org.assertj:assertj-core:3.23.1'
    //모키토 의존성 추가
    testImplementation "org.mockito:mockito-core:3.+"
    //JdbcTemplate 의존성 추가
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    //DB설정
    runtimeOnly 'mysql:mysql-connector-java:8.0.32'
}

tasks.named('test') {
    useJUnitPlatform()
}
